# keepworks

shopping_api/: .env  Cargo.toml  README.md  format.json
shopping_api/migrations/2020-12-22-094057_shopping/: down.sql  up.sql
shopping_api/src/: db.rs  main.rs  schema.rs
shopping_api/src/manage_users/: auth.rs  mod.rs  show_users.rs
shopping_api/src/orders/: mod.rs  routes.rs
shopping_api/src/orders/models/: add_products.rs  get_orders.rs  get_products.rs  mod.rs  place_order.rs
