[package]
name = "shopping_api"
version = "1.0.0"
authors = ["Tarun Jaiswal <tarunjais28@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
diesel = { version = "1.4.5", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15"
env_logger = "0.8"
r2d2 = "0.8"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
chrono = { version = "0.4.19", features = ["serde"] }
bcrypt = "0.9.0"
